# core

./: .gitignore  build.gradle  gradle.properties
core/: CMakeLists.txt  build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/aidl/com/scliang/core/media/: IAudioPlayService.aidl  IAudioPlayStateCallback.aidl
core/src/main/cpp/: core.cpp  media.cpp  media2.cpp  media3.cpp  media4.cpp
core/src/main/cpp/lamemp3/: machine.h
core/src/main/cpp/speex/: CMakeLists.txt  fftwrap.c
core/src/main/cpp/speex/include/speex/: speex_config_types.h
core/src/main/cpp/ucrop/: uCrop.cpp
core/src/main/cpp/webrtc/: CMakeLists.txt
core/src/main/cpp/webrtc/base/: CMakeLists.txt
core/src/main/cpp/webrtc/common_audio/: CMakeLists.txt
core/src/main/cpp/webrtc/common_audio/resampler/: CMakeLists.txt
core/src/main/cpp/webrtc/common_audio/signal_processing/: CMakeLists.txt
core/src/main/cpp/webrtc/common_audio/vad/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/aec/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/aecm/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/agc/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/beamformer/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/intelligibility/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/ns/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/transient/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/utility/: CMakeLists.txt
core/src/main/cpp/webrtc/modules/audio_processing/vad/: CMakeLists.txt
core/src/main/java/com/scliang/core/analysis/: Analysis.java
core/src/main/java/com/scliang/core/base/: AliFileRequestBody.java  AliFileRequestCallback.java  AliOSS.java  AliOSSListObjectListener.java  AndroidBug5497Workaround.java  ApkDownloadCompletedListener.java  BaseActivity.java  BaseApplication.java  BaseDataLogFileListFragment.java  BaseFragment.java  ContentContainer.java  ContentContext.java  ContentMask.java  ContentType.java  Data.java  DataCacheManager.java  DataCallback.java  DataCompressUtils.java  DataConverter.java  DataConverterFactory.java  DataLogFileInterceptor.java  DataLogFilter.java  DataLogger.java  DataLoggingInterceptor.java  DataMemoryCacheInterceptor.java  DataRequestUtils.java  DataUploadListener.java  GlobalLiveData.java  GlobalViewModel.java  Logger.java  NUtils.java  OnCheckPermissionImpl.java  OnCheckPermissionsListener.java  OnDownloadFileListener.java  OnImageFetchCompletedListener.java  Permission.java  PermissionPageUtils.java  PushFragmentContainer.java  Questioner.java  RootContainer.java  (+5 more)
core/src/main/java/com/scliang/core/ble/: BLE.java  BleDevice.java  OnBLEChangeListener.java
core/src/main/java/com/scliang/core/bridge/: BaseChromeClient.java  BaseWebClient.java  BaseWebFragment.java  BaseWebView.java  BaseX5ChromeClient.java  BaseX5WebClient.java  BaseX5WebFragment.java  BasicBridge.java  BasicBridgeHandler.java  BasicChromeClient.java  BasicX5ChromeClient.java  HandlerObject.java  IBridge.java  IBridgeCallback.java  IToJSResultCallback.java
core/src/main/java/com/scliang/core/media/: IMediaNUtils.java  MediaNUtils.java  MediaNUtils2.java  MediaNUtils3.java  MediaNUtils4.java
core/src/main/java/com/scliang/core/ui/: BaseCategoryFragment.java  BaseRecyclerDragView.java  BaseRecyclerItemAnimator.java  BaseSimpleFragment.java  BaseViewGroup.java  Category.java  CategoryAdapter.java  IBanner.java  IBaseFragmentAdapter.java  ItemDragHelperCallBack.java  LoopVPAdapter.java  OSCItem.java  OnBannerCreateItemViewListener.java  OnBannerItemClickListener.java  OnBannerWHRatioChangeListener.java  OnCategoryDragListener.java  OnCategoryListener.java  UIAudioCutView.java  UIAudioOSCSinView.java  UIAudioOSCView.java  UIAudioPlayOSCView.java  UIAutoFitTextureView.java  UIBackEditText.java  UIBannerLayout.java  UIBannerLayout2.java  UICategoryRecyclerView.java  UIExpandTextView.java  UIHighlightTextLineView.java  UIMaximumHeightView.java  (+15 more)
core/src/main/res/anim/: anim_push_popwindow_in.xml  anim_push_popwindow_out.xml
core/src/main/res/drawable/: bg_category_shape.xml  btn_confirm_bottom_action.xml  btn_confirm_left_action.xml  btn_confirm_right_action.xml  category_edit_close.xml  dialog_confirm_bottom_action_normal.xml  dialog_confirm_bottom_action_pressed.xml  dialog_confirm_left_action_normal.xml  dialog_confirm_left_action_pressed.xml  dialog_confirm_right_action_normal.xml  dialog_confirm_right_action_pressed.xml  drawable_base_dialog_background.xml  drawable_toast.xml  shape_highlight_text_line_thumb.xml  shape_read_tip_bg.xml  shape_read_tip_point_bg.xml  shape_round_red.xml  shape_stroke_red.xml  webview_progressbar_bg.xml  webview_progressbar_bg_color.xml
core/src/main/res/layout/: activity_base.xml  activity_base_drawer.xml  activity_class_photo.xml  dialog_base.xml  fragment_base_camera.xml  fragment_base_simple.xml  fragment_base_video_player.xml  fragment_base_web.xml  fragment_base_x5_web.xml  fragment_category.xml  fragment_data_log_file_list.xml  ucrop_activity_photobox.xml  ucrop_aspect_ratio.xml  ucrop_layout_rotate_wheel.xml  ucrop_layout_scale_wheel.xml  ucrop_view.xml  view_application_default_content_mask.xml  view_banner_item.xml  view_dialog_simple_confirm.xml  view_dialog_simple_load.xml  view_expand_textview.xml  view_grid_item.xml  view_highlight_text_line.xml  view_item_category.xml  view_item_category_title.xml  view_list_dir.xml  view_list_dir_item.xml  view_log_file_item.xml  view_recycler_loadmore.xml  view_recycler_refresh.xml  view_simple_ble_device_item.xml  view_simple_item.xml  view_toast.xml  view_toast_old.xml  view_toolbar_title.xml  view_uirecycler_load_all_tip.xml  view_uirecycler_loading.xml  view_uirecycler_no_data.xml
core/src/main/res/menu/: menu_ble_scan.xml  ucrop_menu_activity.xml
core/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml  ucrop_strings.xml
(+114 files in other folders)
